background fixed. need text wrap in card

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,32 @@
 
 .back{
   background-image: url("macbook.jpg");
-  background-size: 75vw;
-  background-size: 100vh;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
+  height: 115vh;
+  background-position: center;
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  background-image: none;
+}
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 55px;
+  color:grey;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color:grey;
+}
+.wrap-text{
+  word-wrap: break-word;
 }
